--- a/terraform/cloudformation/main.yaml
+++ b/terraform/cloudformation/main.yaml
@@ -145,7 +145,7 @@ Resources:
             Value: !Ref KubernetesVersion
           - Name: ADMIN_ROLE_ARN
             Value: !Ref AdminRoleArn
-          - Name: CODEBUILD_SERVICE_ROLE
+          - Name: CB_SERVICE_ROLE
             Value: !GetAtt CodeBuildServiceRole.Arn
       ServiceRole: !GetAtt CodeBuildServiceRole.Arn
       Source:
