--- a/terraform/cloudformation/cleanup-buildspec.yml
+++ b/terraform/cloudformation/cleanup-buildspec.yml
@@ -13,7 +13,7 @@ env:
     CIDR2: ${CIDR2}
     VERSION: ${VERSION}
     ADMIN_ROLE_ARN: ${ADMIN_ROLE_ARN}
-    CODEBUILD_SERVICE_ROLE: ${CODEBUILD_SERVICE_ROLE}
+    CB_SERVICE_ROLE: ${CB_SERVICE_ROLE}
 
 phases:
   install:
@@ -109,7 +109,7 @@ phases:
           -var="cluster_2_cidr=${CIDR2}" \
           -var="cluster_version=${VERSION}" \
           -var="admin_role_arn_from_cloudformation=${ADMIN_ROLE_ARN}" \
-          -var="codebuild_role_arn_from_cloudformation=${CODEBUILD_SERVICE_ROLE}"
+          -var="codebuild_role_arn_from_cloudformation=${CB_SERVICE_ROLE}"
 
   post_build:
     commands:
